fix: Update message margin top on mobile

--- a/layout/assets/styles/components/_message.scss
+++ b/layout/assets/styles/components/_message.scss
@@ -21,8 +21,14 @@
 
   &__description {
     font-size: 1.5rem;
-    margin-left: 0.85rem;
     line-height: 2.275rem;
+    margin-top: 1rem;
+
+    /* Media Queries */
+    @include respond-to('sm') {
+      margin-top: 0;
+      margin-left: 0.85rem;
+    }
   }
 
   [class*='icon'] {
